--- a/charity_profile.html
+++ b/charity_profile.html
@@ -122,60 +122,24 @@
   left: 0;
   z-index: 100;
 }
-    .volunteer-form-container {           
-        background: white;           
-        border-radius: 8px;            
-        box-shadow: 0 4px 8pxrgba(0, 0, 0, 0.1);            
-        max-width: 600px;                                 
-        margin: 20px auto;             
-        padding: 20px;       
-    }
-#volunteerForm input,
-#volunteerForm textarea {
-    width:100%;
-    Padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    border:1px; solid #ccc;
-}
-
-#volunteernForm button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-    #volunteerForm button:hover {
-        background-color: #45a049
-    }     
-
-    .modal {
+   volunteer-form-container {
             display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1; /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-        }
-
-        .modal-content {
-            background-color: #fff;
-            margin: 15% auto;
+            margin-top: 20px;
+            background-color: #f9f9f9;
             padding: 20px;
             border-radius: 8px;
-            width: 80%;
-            max-width: 500px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            width: 60%;
+            margin-left: auto;
+            margin-right: auto;
         }
 
-        .modal-content h3 {
+        .volunteer-form-container h3 {
             margin-top: 0;
         }
 
-        .modal-content input, .modal-content textarea {
+        .volunteer-form-container input, 
+        .volunteer-form-container textarea {
             width: 100%;
             padding: 10px;
             margin-bottom: 10px;
@@ -183,7 +147,7 @@
             border: 1px solid #ccc;
         }
 
-        .modal-content button {
+        .volunteer-form-container button {
             background-color: #4CAF50;
             color: white;
             padding: 10px 15px;
@@ -192,26 +156,18 @@
             cursor: pointer;
         }
 
-        .modal-content button:hover {
+        .volunteer-form-container button:hover {
             background-color: #45a049;
         }
 
-        .modal .close {
-            color: #aaa;
-            font-size: 28px;
-            font-weight: bold;
-            position: absolute;
-            top: 0;
-            right: 25px;
-            padding: 16px;
+        .volunteer-form-container .cancel-btn {
+            background-color: #f44336;
         }
 
-        .modal .close:hover,
-        .modal .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
+        .volunteer-form-container .cancel-btn:hover {
+            background-color: #e53935;
+        }                  
+
         </style>
 </head>
 <body>
@@ -254,26 +210,23 @@
             <button class="volunteer-btn" data-charity="The Salvation Army">Volunteer Here</button>
         </div>
     </main>
-
+<div id="volunteerFormContainer" class="volunteer-form-container">
+        <h3>Volunteer Form</h3>
+        <form id="volunteerForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br>
+            <label for="message">Why do you want to volunteer?</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br>
+            <button type="submit">Submit</button>
+            <button type="button" id="cancelForm" class="cancel-btn">Cancel</button>
+        </form>
+    </div>   
+    
     <footer>
         <p>&copy; 2024 HelpHub. All rights reserved.</p>
     </footer>
-<div id="volunteerModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h3>Volunteer Form</h3>
-            <form id="volunteerForm">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required><br>
-                <label for="message">Why do you want to volunteer?</label><br>
-                <textarea id="message" name="message" rows="4" required></textarea><br>
-                <button type="submit">Submit</button>
-                <button type="button" id="cancelForm">Cancel</button>
-            </form>
-        </div>
-    </div>    
     <script src= "charity_profile.js"></script></body>
 </html>
 
