--- a/charity_profile.html
+++ b/charity_profile.html
@@ -118,12 +118,12 @@
   color: white;
   padding: 10px;
   border-radius: 5px;
-  top: 30px; /* Adjust based on your design */
+  top: 30px; 
   left: 0;
   z-index: 100;
 }
    volunteer-form-container {
-            display: none; /* Hidden by default */
+            display: none;
             margin-top: 20px;
             background-color: #f9f9f9;
             padding: 20px;
@@ -134,10 +134,9 @@
             margin-right: auto;
         }
 
-        .volunteer-form-container h3 {
-            margin-top: 0;
-        }
-
+        .volunteer-form h3 {
+            margin-top: 0;
+        }
         .volunteer-form-container input, 
         .volunteer-form-container textarea {
             width: 100%;
