--- a/charity_profile.html
+++ b/charity_profile.html
@@ -163,10 +163,19 @@
             background-color: #f44336;
         }
 
-        .volunteer-form-container .cancel-btn:hover {
+        .volunteer-form-container:hover {
             background-color: #e53935;
-        }                  
-
+        }   
+.cancel-btn { 
+    background-color: red; 
+            } 
+    .cancel-btn:hover { 
+        background-color: #cc0000;
+                                    } 
+                  
+    #volunteerFormToggle:checked + #volunteerFormContainer { 
+        display: flex; 
+                  }                  
         </style>
 </head>
 <body>
