--- a/charity_profile.html
+++ b/charity_profile.html
@@ -232,7 +232,7 @@
            <label for="volunteerFromToggle" class="cancel-btn volunteer-btn"> cancel</label>
         </form>
     </div>   
-    
+    <label for="voluteerFromToggle" class="volunteer-button-fixed" >Volunteer here</label>
     <footer>
         <p>&copy; 2024 HelpHub. All rights reserved.</p>
     </footer>
