--- a/charity_profile.html
+++ b/charity_profile.html
@@ -218,7 +218,7 @@
              < label for="volunteerFromToggle"class="volunteer-btn">Volunteer Here</label>
         </div> 
     </main>
-    <input type="checkbox" id="voluteerFormToggle" style="display:none;">
+    <input type="checkbox" id="volunteerFormToggle" style="display:none;">
 <div id="volunteerFormContainer" class="volunteer-form-container">
         <h3>Volunteer Form</h3>
         <form id="volunteerForm">
@@ -229,10 +229,10 @@
             <label for="message">Why do you want to volunteer?</label><br>
             <textarea id="message" name="message" rows="4" required></textarea><br>
             <button type="submit">Submit</button>
-           <label for="volunteerFromToggle" class="cancel-btn volunteer-btn"> cancel</label>
+           <label for="volunteerFromToggle" class="cancel-btn volunteer-btn">cancel</label>
         </form>
     </div>   
-    <label for="voluteerFromToggle" class="volunteer-button-fixed" >Volunteer here</label>
+    <label for="volunteerFromToggle" class="volunteer-button-fixed" >Volunteer here</label>
     <footer>
         <p>&copy; 2024 HelpHub. All rights reserved.</p>
     </footer>
