--- a/charity_profile.html
+++ b/charity_profile.html
@@ -145,7 +145,14 @@
             <img src="https://th.bing.com/th/id/R.f2ef1fdda5718b156d192c0d82e343d7?rik=Gnsmd%2fLr%2fUgKEg&riu=http%3a%2f%2fpluspng.com%2fimg-png%2famerican-red-cross-logo-png--900.jpg&ehk=chzIbwa1Uvik0JLgmOmlAsGw1l9Yqkm2Xcz5Zzh0uF4%3d&risl=&pid=ImgRaw&r=0" width="300" height="200" alt="American Red Cross">
             <p><a href="https://www.redcrossblood.org/give.html/find-drive?cid=brand&med=cpc&source=bing&scode=RSG00000E017&gclsrc=3p.ds">Visit the Red Cross website</a></p>
            
-              <button style="fontsize:25px;"volunteer-btn">Volunteer Here</button>
+              <button id="myBtn" type="button">Volunteer here</button>
+              <script>
+                    const myBtn = document.getElementById("myBtn");
+                    myBtn.addEventlistenr("click", fuction(e) {
+                                          const name = prompt("First Name");
+                    });
+                                   
+              </script>
               
             
             <h2>The Salvation Army</h2>
