--- a/charity_profile.html
+++ b/charity_profile.html
@@ -7,8 +7,7 @@
     <title>HelpHub - Charity Profile</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Add your previous styles here */
-        /* Only changes for button and form container */
+        
         button {
             padding: 10px 20px;
             background-color: #4CAF50;
@@ -90,13 +89,41 @@
             <img src="https://th.bing.com/th/id/R.f2ef1fdda5718b156d192c0d82e343d7?rik=Gnsmd%2fLr%2fUgKEg&riu=http%3a%2f%2fpluspng.com%2fimg-png%2famerican-red-cross-logo-png--900.jpg&ehk=chzIbwa1Uvik0JLgmOmlAsGw1l9Yqkm2Xcz5Zzh0uF4%3d&risl=&pid=ImgRaw&r=0" width="300" height="200" alt="American Red Cross">
             <p><a href="https://www.redcrossblood.org/give.html/find-drive?cid=brand&med=cpc&source=bing&scode=RSG00000E017&gclsrc=3p.ds">Visit the Red Cross website</a></p>
             <button class="volunteer-btn" onclick="toggleForm()">Volunteer Here</button>
+ <div id="volunteer-form">
+                <h3>Volunteer Information</h3>
+                <form id="contact-form">
+                    <label for="name">Name:</label> 
+                    <input type="text" id="name" name="name" required><br> 
 
-            <h2>The Salvation Army</h2>
+                    <label for="email">Email:</label> 
+                    <input type="email" id="email" name="email" required><br> 
+
+                    <label for="phone">Phone:</label> 
+                    <input type="tel" id="phone" name="phone"><br> 
+
+                    <button type="submit">Submit</button> 
+                </form>
+            </div>            <h2>The Salvation Army</h2>
             <h3>Why This Charity?</h3>
             <p>The Salvation Army operates rehabilitation facilities across the country, providing help and hope to individuals facing various challenges, including substance abuse. Their residential programs offer spiritual, emotional, and social assistance to help participants live healthy, fulfilling lives.</p>
             <img src="https://th.bing.com/th/id/OIP.aK-Q7OjBRx4frcBp0I794gHaHa?rs=1&pid=ImgDetMain" width="300" height="200" alt="The Salvation Army">
             <p><a href="https://www.salvationarmyusa.org/usn/">Visit The Salvation Army website</a></p>
             <button class="volunteer-btn" onclick="toggleForm()">Volunteer Here</button>
+ <div id="volunteer-form">
+                <h3>Volunteer Information</h3>
+                <form id="contact-form">
+                    <label for="name">Name:</label> 
+                    <input type="text" id="name" name="name" required><br> 
+
+                    <label for="email">Email:</label> 
+                    <input type="email" id="email" name="email" required><br> 
+
+                    <label for="phone">Phone:</label> 
+                    <input type="tel" id="phone" name="phone"><br> 
+
+                    <button type="submit">Submit</button> 
+                </form>
+            </div>          
         </div>
     </main>
           
@@ -105,7 +132,7 @@
     </footer>
 
     <script>
-        // JavaScript to toggle visibility of the volunteer form
+        
         function toggleForm() {
             var form = document.getElementById('volunteer-form');
             if (form.style.display === "none" || form.style.display === "") {
