--- a/charity_profile.html
+++ b/charity_profile.html
@@ -7,8 +7,40 @@
     <title>HelpHub - Charity Profile</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        
-        button {
+        ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #333;
+  text-align: center;
+}
+
+li {
+  display: inline-block;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 30px;
+}
+
+li a:hover {
+  background-color: #111;   
+}
+p {
+    text-align: center;   
+    font-family: 'Roboto', sans-serif;  
+    font-size: 30px; 
+    color: #333;      
+    line-height: 1.6; 
+}
+  footer { background-color: #333; 
+                  color: white; 
+           button {
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
