--- a/charity_profile.html
+++ b/charity_profile.html
@@ -27,10 +27,9 @@ li a {
   text-decoration: none;
   font-size: 30px;
 }
-
-li a:hover {
-  background-color: #111;   
-}
+  footer p {
+       margin: 0;
+            }
 p {
     text-align: center;   
     font-family: 'Roboto', sans-serif;  
