--- a/charity_profile.html
+++ b/charity_profile.html
@@ -14,8 +14,8 @@
   background-color: #333;
   text-align: center;
 }
-
-li {
+li a:hover {
+  background-color: #111; li {
   display: inline-block;
 }
 
@@ -115,7 +115,7 @@ p {
             </div>
 
             <h2>American Red Cross</h2>
-            <h3 style="font-size:25px;">Why This Charity?</h3>
+            <h3 style="font-size:30px;">Why This Charity?</h3>
             <p>Donating blood or volunteering helps give back to those affected by natural disasters or emergencies.</p>
             <img src="https://th.bing.com/th/id/R.f2ef1fdda5718b156d192c0d82e343d7?rik=Gnsmd%2fLr%2fUgKEg&riu=http%3a%2f%2fpluspng.com%2fimg-png%2famerican-red-cross-logo-png--900.jpg&ehk=chzIbwa1Uvik0JLgmOmlAsGw1l9Yqkm2Xcz5Zzh0uF4%3d&risl=&pid=ImgRaw&r=0" width="300" height="200" alt="American Red Cross">
             <p><a href="https://www.redcrossblood.org/give.html/find-drive?cid=brand&med=cpc&source=bing&scode=RSG00000E017&gclsrc=3p.ds">Visit the Red Cross website</a></p>
